[package]
name = "clipzero"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clipzero"
path = "src/main.rs"

[dependencies]
iced = { version = "0.10", features = ["system"] }
arboard = "3.2"
global-hotkey = "0.4"
crossbeam-channel = "0.5.14"
smol_str = "0.3.2"
once_cell = "1.20.3"
clipboard-master = "3.1.3"
